--- a/public/backend/scss/sb-admin-2.css
+++ b/public/backend/scss/sb-admin-2.css
@@ -87,10 +87,12 @@ p {
 abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0;
-  text-decoration-skip-ink: none;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
 }
 
 address {
@@ -1805,6 +1807,10 @@ pre code {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
 }
+.form-control::-moz-placeholder {
+  color: #858796;
+  opacity: 1;
+}
 .form-control::placeholder {
   color: #858796;
   opacity: 1;
@@ -1818,7 +1824,9 @@ input[type=date].form-control,
 input[type=time].form-control,
 input[type=datetime-local].form-control,
 input[type=month].form-control {
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 select.form-control:focus::-ms-value {
@@ -2203,7 +2211,9 @@ textarea.form-control {
   color: #858796;
   text-align: center;
   vertical-align: middle;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
@@ -3266,7 +3276,8 @@ input[type=button].btn-block {
   display: block;
   min-height: 1.5rem;
   padding-left: 1.5rem;
-  color-adjust: exact;
+  -webkit-print-color-adjust: exact;
+          color-adjust: exact;
 }
 
 .custom-control-inline {
@@ -3407,7 +3418,9 @@ input[type=button].btn-block {
   background: #fff url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%235a5c69' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") right 0.75rem center/8px 10px no-repeat;
   border: 1px solid #d1d3e2;
   border-radius: 0.35rem;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 .custom-select:focus {
   border-color: #bac8f3;
@@ -3520,7 +3533,9 @@ input[type=button].btn-block {
   height: 1.4rem;
   padding: 0;
   background-color: transparent;
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 .custom-range:focus {
   outline: 0;
@@ -3544,11 +3559,14 @@ input[type=button].btn-block {
   background-color: #4e73df;
   border: 0;
   border-radius: 1rem;
+  -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  appearance: none;
+  -webkit-appearance: none;
+          appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-webkit-slider-thumb {
+    -webkit-transition: none;
     transition: none;
   }
 }
@@ -3570,11 +3588,14 @@ input[type=button].btn-block {
   background-color: #4e73df;
   border: 0;
   border-radius: 1rem;
+  -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  appearance: none;
+  -moz-appearance: none;
+       appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-moz-range-thumb {
+    -moz-transition: none;
     transition: none;
   }
 }
@@ -3599,11 +3620,13 @@ input[type=button].btn-block {
   background-color: #4e73df;
   border: 0;
   border-radius: 1rem;
+  -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .custom-range::-ms-thumb {
+    -ms-transition: none;
     transition: none;
   }
 }
@@ -4305,8 +4328,10 @@ input[type=button].btn-block {
 }
 @media (min-width: 576px) {
   .card-columns {
-    column-count: 3;
-    column-gap: 1.25rem;
+    -moz-column-count: 3;
+         column-count: 3;
+    -moz-column-gap: 1.25rem;
+         column-gap: 1.25rem;
     orphans: 1;
     widows: 1;
   }
@@ -5219,6 +5244,7 @@ a.close.disabled {
 .modal-dialog-centered::before {
   display: block;
   height: calc(100vh - 1rem);
+  height: -moz-min-content;
   height: min-content;
   content: "";
 }
@@ -5326,6 +5352,7 @@ a.close.disabled {
   }
   .modal-dialog-centered::before {
     height: calc(100vh - 3.5rem);
+    height: -moz-min-content;
     height: min-content;
   }
   .modal-sm {
@@ -6888,15 +6915,21 @@ button.bg-dark:focus {
   }
 }
 .user-select-all {
-  user-select: all !important;
+  -webkit-user-select: all !important;
+     -moz-user-select: all !important;
+          user-select: all !important;
 }
 
 .user-select-auto {
-  user-select: auto !important;
+  -webkit-user-select: auto !important;
+     -moz-user-select: auto !important;
+          user-select: auto !important;
 }
 
 .user-select-none {
-  user-select: none !important;
+  -webkit-user-select: none !important;
+     -moz-user-select: none !important;
+          user-select: none !important;
 }
 
 .overflow-auto {
@@ -10222,67 +10255,67 @@ form.user .btn-user {
 
 @keyframes noise-anim {
   0% {
-    clip: rect(81px, 9999px, 47px, 0);
+    clip: rect(67px, 9999px, 20px, 0);
   }
   5% {
-    clip: rect(79px, 9999px, 6px, 0);
+    clip: rect(50px, 9999px, 82px, 0);
   }
   10% {
-    clip: rect(21px, 9999px, 71px, 0);
+    clip: rect(46px, 9999px, 88px, 0);
   }
   15% {
-    clip: rect(63px, 9999px, 48px, 0);
+    clip: rect(60px, 9999px, 84px, 0);
   }
   20% {
-    clip: rect(53px, 9999px, 38px, 0);
+    clip: rect(97px, 9999px, 11px, 0);
   }
   25% {
-    clip: rect(46px, 9999px, 29px, 0);
+    clip: rect(66px, 9999px, 64px, 0);
   }
   30% {
-    clip: rect(31px, 9999px, 24px, 0);
+    clip: rect(44px, 9999px, 97px, 0);
   }
   35% {
-    clip: rect(87px, 9999px, 1px, 0);
+    clip: rect(58px, 9999px, 15px, 0);
   }
   40% {
-    clip: rect(27px, 9999px, 59px, 0);
+    clip: rect(97px, 9999px, 59px, 0);
   }
   45% {
-    clip: rect(77px, 9999px, 23px, 0);
+    clip: rect(23px, 9999px, 37px, 0);
   }
   50% {
-    clip: rect(8px, 9999px, 56px, 0);
+    clip: rect(41px, 9999px, 99px, 0);
   }
   55% {
-    clip: rect(92px, 9999px, 10px, 0);
+    clip: rect(36px, 9999px, 62px, 0);
   }
   60% {
-    clip: rect(56px, 9999px, 54px, 0);
+    clip: rect(54px, 9999px, 22px, 0);
   }
   65% {
-    clip: rect(76px, 9999px, 32px, 0);
+    clip: rect(45px, 9999px, 85px, 0);
   }
   70% {
-    clip: rect(37px, 9999px, 73px, 0);
+    clip: rect(22px, 9999px, 49px, 0);
   }
   75% {
-    clip: rect(16px, 9999px, 34px, 0);
+    clip: rect(28px, 9999px, 52px, 0);
   }
   80% {
-    clip: rect(20px, 9999px, 68px, 0);
+    clip: rect(59px, 9999px, 75px, 0);
   }
   85% {
-    clip: rect(32px, 9999px, 12px, 0);
+    clip: rect(58px, 9999px, 78px, 0);
   }
   90% {
-    clip: rect(38px, 9999px, 40px, 0);
+    clip: rect(95px, 9999px, 3px, 0);
   }
   95% {
-    clip: rect(34px, 9999px, 28px, 0);
+    clip: rect(23px, 9999px, 89px, 0);
   }
   100% {
-    clip: rect(91px, 9999px, 43px, 0);
+    clip: rect(61px, 9999px, 9px, 0);
   }
 }
 .error:after {
@@ -10300,67 +10333,67 @@ form.user .btn-user {
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(87px, 9999px, 9px, 0);
+    clip: rect(51px, 9999px, 30px, 0);
   }
   5% {
-    clip: rect(94px, 9999px, 22px, 0);
+    clip: rect(90px, 9999px, 19px, 0);
   }
   10% {
-    clip: rect(80px, 9999px, 77px, 0);
+    clip: rect(91px, 9999px, 74px, 0);
   }
   15% {
-    clip: rect(98px, 9999px, 42px, 0);
+    clip: rect(79px, 9999px, 45px, 0);
   }
   20% {
-    clip: rect(17px, 9999px, 42px, 0);
+    clip: rect(16px, 9999px, 76px, 0);
   }
   25% {
-    clip: rect(24px, 9999px, 8px, 0);
+    clip: rect(15px, 9999px, 9px, 0);
   }
   30% {
-    clip: rect(53px, 9999px, 69px, 0);
+    clip: rect(40px, 9999px, 73px, 0);
   }
   35% {
-    clip: rect(39px, 9999px, 48px, 0);
+    clip: rect(25px, 9999px, 49px, 0);
   }
   40% {
-    clip: rect(65px, 9999px, 76px, 0);
+    clip: rect(15px, 9999px, 85px, 0);
   }
   45% {
-    clip: rect(71px, 9999px, 27px, 0);
+    clip: rect(34px, 9999px, 40px, 0);
   }
   50% {
-    clip: rect(16px, 9999px, 77px, 0);
+    clip: rect(5px, 9999px, 1px, 0);
   }
   55% {
-    clip: rect(88px, 9999px, 47px, 0);
+    clip: rect(78px, 9999px, 8px, 0);
   }
   60% {
-    clip: rect(91px, 9999px, 21px, 0);
+    clip: rect(43px, 9999px, 28px, 0);
   }
   65% {
-    clip: rect(17px, 9999px, 77px, 0);
+    clip: rect(3px, 9999px, 52px, 0);
   }
   70% {
-    clip: rect(6px, 9999px, 47px, 0);
+    clip: rect(29px, 9999px, 66px, 0);
   }
   75% {
-    clip: rect(26px, 9999px, 48px, 0);
+    clip: rect(49px, 9999px, 9px, 0);
   }
   80% {
-    clip: rect(83px, 9999px, 26px, 0);
+    clip: rect(23px, 9999px, 25px, 0);
   }
   85% {
-    clip: rect(33px, 9999px, 62px, 0);
+    clip: rect(65px, 9999px, 73px, 0);
   }
   90% {
-    clip: rect(15px, 9999px, 31px, 0);
+    clip: rect(35px, 9999px, 40px, 0);
   }
   95% {
-    clip: rect(89px, 9999px, 75px, 0);
+    clip: rect(14px, 9999px, 96px, 0);
   }
   100% {
-    clip: rect(77px, 9999px, 60px, 0);
+    clip: rect(34px, 9999px, 94px, 0);
   }
 }
 .error:before {
