--- a/public/frontend/styles/main.css
+++ b/public/frontend/styles/main.css
@@ -281,7 +281,8 @@ main .section-events-content {
 main .section-events-content .section-event-program .costume-event {
   border-radius: 10px;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   max-height: 500px;
   padding: 1px;
   margin-top: 20px;
@@ -699,7 +700,8 @@ main .button-events .btn-submit:hover {
 .proker .profile-circle img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Gambar akan disesuaikan di dalam lingkaran tanpa terdistorsi */
+  -o-object-fit: cover;
+     object-fit: cover; /* Gambar akan disesuaikan di dalam lingkaran tanpa terdistorsi */
 }
 .proker .profile-name {
   margin: 10px;
