--- a/public/frontend/styles/main.css
+++ b/public/frontend/styles/main.css
@@ -19,6 +19,12 @@ body {
   color: #071c4d;
   font-family: "roboto", sans-serif;
 }
+.navbar-light .img-avatar {
+  margin: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+}
 
 .btn-navbar-right {
   margin-top: -20px !important;
@@ -43,10 +49,52 @@ body {
   border: none;
   outline: none;
 }
+.dropdown .dropdown-menu {
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  padding: 8px 0;
+  min-width: 200px;
+  transition: all 0.3s ease;
+}
+.dropdown .dropdown-menu .dropdown-item {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  color: #333;
+  font-weight: 500;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.dropdown .dropdown-menu .dropdown-item:hover {
+  background-color: #f0f0f5;
+  color: #007bff;
+}
+.dropdown .dropdown-menu .img-avatar {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+.dropdown .dropdown-menu i {
+  font-size: 20px;
+  color: #333;
+  margin-right: 10px; /* Spasi antara ikon dan teks */
+  margin-left: 20px;
+}
+.dropdown .dropdown-menu .dropdown-item:hover i {
+  color: #007bff;
+}
+.dropdown .dropdown-menu d-flex.align-items-center:hover {
+  background-color: #f8f9fa;
+  cursor: pointer;
+}
 .dropdown .img-user {
   width: 20px;
   height: 20px;
   margin-left: 15px;
+  border-radius: 100%;
 }
 
 header {
