Semua fitur berhasil di implementasikan

--- a/public/frontend/styles/qna.css
+++ b/public/frontend/styles/qna.css
@@ -306,4 +306,5 @@ header .btn-explore:hover {
     border: 1px solid #ffffff;
     width: 100%;
     margin-top: 10px;
-} /*# sourceMappingURL=main.css.map */
+} 
+/*# sourceMappingURL=main.css.map */
