--- a/public/frontend/styles/main.css
+++ b/public/frontend/styles/main.css
@@ -368,6 +368,109 @@ main .button-events .btn-submit:hover {
   color: #ffc436;
 }
 
+.news-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.news-item {
+  margin-bottom: 20px;
+}
+.news-item img {
+  width: 100%;
+  height: auto;
+}
+
+.news-category {
+  background-color: #ffc107;
+  color: #000;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+}
+
+.news-date {
+  background-color: #e9ecef;
+  color: #000;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+}
+
+.btn-more {
+  background-color: transparent;
+  color: #0b5ed7;
+  border: 2px solid #0b5ed7;
+  border-radius: 5px;
+  padding: 10px 20px;
+  float: right;
+}
+.btn-more:hover {
+  background-color: #0b5ed7;
+  color: #fff;
+  text-decoration: none;
+}
+
+.breadcrumb {
+  background-color: white;
+  padding: 0;
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: " / ";
+}
+
+.news-title {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.news-meta {
+  font-size: 14px;
+  color: gray;
+}
+
+.news-author {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.news-editor {
+  font-size: 14px;
+  color: gray;
+}
+
+.news-content {
+  margin-top: 20px;
+}
+
+.sidebar {
+  border-left: 1px solid #ddd;
+  padding-left: 20px;
+}
+.sidebar h5 {
+  font-size: 18px;
+  font-weight: bold;
+}
+.sidebar .list-group-item {
+  border: none;
+  padding: 0;
+}
+.sidebar .list-group-item img {
+  width: 50px;
+  height: auto;
+  margin-right: 10px;
+}
+.sidebar .list-group-item a {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+}
+.sidebar .list-group-item a:hover {
+  text-decoration: underline;
+}
+
 .footer {
   background-color: #0c356a;
   color: white;
@@ -782,4 +885,31 @@ main .button-events .btn-submit:hover {
 .program-content .program-item .program-item-title {
   font-weight: bold;
   margin-bottom: 10px;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/* otherNews */
+/* CSS untuk memperbaiki tampilan pagination */
+.pagination {
+  margin-top: 20px;
+}
+
+.pagination .page-item {
+  margin: 0 5px;
+}
+
+.pagination .page-item .page-link {
+  border-radius: 50px; /* Membuat tombol lebih bulat */
+  padding: 10px 20px;
+}
+
+.pagination .page-item.active .page-link {
+  background-color: #0d6efd; /* Warna aktif */
+  border-color: #0d6efd;
+  color: white;
+}
+
+.pagination .page-item .page-link:hover {
+  background-color: #0b5ed7; /* Hover effect */
+}
+
+/*# sourceMappingURL=main.css.map */
