--- a/public/frontend/styles/main.scss
+++ b/public/frontend/styles/main.scss
@@ -436,6 +436,109 @@ main {
     }
 }
 
+//berita
+.news-title {
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
+.news-item {
+    margin-bottom: 20px;
+
+    img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+.news-category {
+    background-color: #ffc107;
+    color: #000;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 0.9rem;
+}
+.news-date {
+    background-color: #e9ecef;
+    color: #000;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 0.9rem;
+}
+.btn-more {
+    background-color: transparent;
+    color: #0b5ed7;
+    border: 2px solid #0b5ed7;
+    border-radius: 5px;
+    padding: 10px 20px;
+    float: right;
+
+    &:hover {
+        background-color: #0b5ed7;
+        color: #fff;
+        text-decoration: none;
+    }
+}
+
+//detailsNews
+.breadcrumb {
+    background-color: white;
+    padding: 0;
+}
+.breadcrumb-item + .breadcrumb-item::before {
+    content: " / ";
+}
+.news-title {
+    font-size: 24px;
+    font-weight: bold;
+}
+.news-meta {
+    font-size: 14px;
+    color: gray;
+}
+.news-author {
+    font-size: 14px;
+    font-weight: bold;
+}
+.news-editor {
+    font-size: 14px;
+    color: gray;
+}
+.news-content {
+    margin-top: 20px;
+}
+.sidebar {
+    border-left: 1px solid #ddd;
+    padding-left: 20px;
+
+    h5 {
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .list-group-item {
+        border: none;
+        padding: 0;
+
+        img {
+            width: 50px;
+            height: auto;
+            margin-right: 10px;
+          }
+
+        a {
+            text-decoration: none;
+            color: black;
+            display: flex;
+            align-items: center;
+
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
 // footer
 .footer {
     background-color: #0c356a;
